--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Python CI
 
 on:
   push:
-    branches: [main]
+    branches: [feature-logging]
   pull_request:
-    branches: [main]
+    branches: [feature-logging]
 
 jobs:
   build:
