--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,12 @@ jobs:
           pip install flake8 pytest
       
       - name: Lint with flake8
-        run: flake8 .
+        run: |
+          # Stop the build if there are Python syntax errors or undefined names
+          # But only warn about other style issues instead of failing
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # The following line is for warnings only
+          flake8 . --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
       - name: Run tests
         run: pytest
