--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,12 @@
 name: Python CI/CD
-
 on:
   push:
     branches: [feature-logging]
   pull_request:
     branches: [feature-logging]
-
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       
@@ -42,24 +40,25 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/python-app:latest
       
-      - name: Deploy to EC2 with SSH
+      - name: Deploy Docker container
         env:
-          PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          HOST: ${{ secrets.EC2_HOST }}
-          USER: ${{ secrets.EC2_USERNAME }}
           DOCKER_IMAGE: ${{ secrets.DOCKER_HUB_USERNAME }}/python-app:latest
         run: |
-          echo "$PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
+          # Pull the latest image
+          docker pull $DOCKER_IMAGE
           
-          # SSH commands to deploy
-          ssh -o StrictHostKeyChecking=no -i private_key.pem $USER@$HOST "
-            docker pull $DOCKER_IMAGE
-            docker stop python-app || true
-            docker rm python-app || true
-            docker run -d --name python-app -p 5000:5000 $DOCKER_IMAGE
-            docker ps
-          "
+          # Stop and remove existing container if it exists
+          docker stop python-app || true
+          docker rm python-app || true
           
-          # Clean up
-          rm -f private_key.pem
+          # Run the container with restart policy
+          docker run -d --name python-app --restart=always -p 5000:5000 $DOCKER_IMAGE
+          
+          # Verify container is running
+          docker ps | grep python-app
+          
+          # Wait for application to start
+          sleep 5
+          
+          # Health check - make sure application is responding
+          curl -s http://localhost:5000 || echo 'WARNING: Application health check failed'
